--- a/kugou.plist
+++ b/kugou.plist
@@ -17,7 +17,7 @@
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>com.kugou.kugou</string>
+				<string>com.kugou.kugou1002</string>
 				<key>bundle-version</key>
 				<string>7.0.0</string>
 				<key>kind</key>
